--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "chai": "^4.2.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongoose": "^5.7.3"
+    "mocha": "^6.2.1",
+    "mongoose": "^5.7.3",
+    "supertest": "^4.0.2"
   },
   "devDependencies": {
     "ws": "3.3.2"
